WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136964
Multithreaded WebGL is a bad idea - remove it
https://bugs.webkit.org/show_bug.cgi?id=136964
Summary
Multithreaded WebGL is a bad idea - remove it
Dean Jackson
Reported
2014-09-19 15:23:38 PDT
Multithreaded WebGL is a bad idea - remove it
Attachments
Patch
(13.73 KB, patch)
2014-09-19 15:27 PDT
,
Dean Jackson
bfulgham
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2014-09-19 15:24:15 PDT
Feedback from our OpenGL team is that we should never enable this feature.
Radar WebKit Bug Importer
Comment 2
2014-09-19 15:24:27 PDT
<
rdar://problem/18399858
>
Dean Jackson
Comment 3
2014-09-19 15:27:10 PDT
Created
attachment 238393
[details]
Patch
Brent Fulgham
Comment 4
2014-09-19 15:28:30 PDT
Comment on
attachment 238393
[details]
Patch r=me. Begone, multithreaded WebGL!
Dean Jackson
Comment 5
2014-09-19 15:31:22 PDT
Committed
r173776
: <
http://trac.webkit.org/changeset/173776
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug