Source/WebCore/platform/graphics/GraphicsContext3D.h
@@ -441,7 +441,6 @@ public:
             , noExtensions(false)
             , shareResources(true)
             , preferDiscreteGPU(false)
-            , multithreaded(false)
             , forceSoftwareRenderer(false)
         {
         }
@@ -455,7 +454,6 @@ public:
         bool noExtensions;
         bool shareResources;
         bool preferDiscreteGPU;
-        bool multithreaded;
         bool forceSoftwareRenderer;
     };
 
